<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QPushButton" name="pbOpenNotModalDialog">
      <property name="text">
       <string>Цю кніпочку чіпати можна</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="pbOpenModalDialog">
      <property name="text">
       <string>Цю кніпочку не чіпайте</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="pbTurnOnOff">
      <property name="text">
       <string>відключити</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>23</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
